# embedded_v2

./: HealthData.xlsx  README.md  dashboard_monitor.py  model_prediction.h  platformio.ini
DuLieuNhipTim/2025-12/: 2025-12-16.xlsx
src/: CMakeLists.txt  algorithm.c  algorithm.h  i2c_api.c  i2c_api.h  main.c  max30102_api.c  model_prediction.c  oled_driver.c  oled_driver.h  spi_dummy.c  wifi_init.c  wifi_init.h
train/: enhanced_health_model_5_classes.joblib  export_to_c.py  model_prediction.h  train.py
